--- a/Road to Recovery/pages/reportsMain.html
+++ b/Road to Recovery/pages/reportsMain.html
@@ -454,7 +454,7 @@
                                 <table id="table_rp_center_monthly_by_year" class="table table-striped table-bordered">
                                     <thead>
                                         <tr>
-                                            <th title="People" class="timeCustomWidth">  </th>
+                                            <th title="נתונים" class="timeCustomWidth">  </th>
                                             <th title="1" class="timeCustomWidth">1</th>
                                             <th title="2" class="timeCustomWidth">2</th>
                                             <th title="3" class="timeCustomWidth">3</th>
